# Weather_Agent_OpenAI_SDk

./: pyproject.toml
src/class01/: connection.py  main.py
